@@ -15,6 +15,9 @@ GNU coreutils NEWS                                    -*- outline -*-
    stty --help no longer outputs extraneous gettext header lines
    for translated languages. [bug introduced in coreutils-8.24]
 
+   seq now immediately exits upon write errors.
+   [This bug was present in "the beginning".]
+
 ** Changes in behavior
 
    seq no longer accepts 0 value as increment, and now also rejects NaN
